fix: footer alignment

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body{
   font-family: "Snowburst One";
   display: grid;
-  grid-template-rows: 1fr 8fr 1fr;
+  grid-template-rows: 1fr 8fr 0.5fr;
   min-height: 100vh;
 }
 
@@ -36,10 +36,8 @@ main{
 
 .player, .player_2{
   font-size: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
+  display: grid;
+  justify-items: center;
   white-space: nowrap;
 
 }
@@ -55,6 +53,12 @@ main{
 .player_2{
   color: red;
   border-left: 2px grey solid;
+}
+
+.player>:last-child, .player_2>:last-child{
+  color: rgba(128, 0, 128, 0.171);
+  display: grid;
+  align-items: end;
 }
 
 .board{
@@ -107,10 +111,10 @@ main{
 
 /*FOOTER*/
 footer{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-content: center;
+  justify-items: center;
   background-color: wheat;
 
   border-top: 2px black solid ;
